...
  const router = useRouter();

  return (
    <>
      <Stack.Screen
        options={{
          title: "Friends",
          headerRight: () => (
            <Host matchContents>
              <Button
                variant="text"
                testID="friends-list-button"
                onPress={() => router.push("/friends/list")}
...
