...
        headerBackButtonDisplayMode: "minimal",
      }}
    >
      <Stack.Screen
        name="index"
        options={{
          title: "Feed",
          headerShown: true,
          headerLargeTitle: false,
        }}
      />
      <Stack.Screen
        name="[id]"
...
