...
        description="When friends share posts, they will appear here."
      />
    );
  }

  return (
    <Host testID="friends-feed" useViewportSizeMeasurement style={styles.feed}>
      <FieldGroup>
        {groups?.map((group) => {
          const postRows = chunkFriendsFeedPosts(group.posts);

          return (
            <FieldGroup.Section
...
